# laser_scarecrow-ls22_esp32

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  State.drawio  sdkconfig
diagrams/: urils_esp32_state.puml
main/: CMakeLists.txt  buzzer.c  buzzer.h  config.c  config.h  controls.c  controls.h  coverage.c  coverage.h  debug.c  debug.h  events.c  events.h  homing.c  i2c.c  i2c.h  init.c  init.h  kxtj3.c  kxtj3.h  laser.c  laser.h  leds.c  leds.h  light.h  lightsense.c  lightsense.h  lis2dh12.c  lis2dh12.h  ls2022_esp32.c  magnet.c  magnet.h  map.c  map.h  mpu6050.c  mpu6050.h  oled.c  oled.h  selftest.c  selftest.h  (+25 more)
