idf_component_register(SRCS "coverage.c" "debug.c" "selftest.c" "lis2dh12.c" "i2c.c" "util.c" "settings.c" "servo.c" "lightsense.c" "tape.c" "map.c" "tapemode.c" "substate_home.c" "controls.c" "states.c" "events.c" "magnet.c" "laser.c" "init.c" "stepper.c" "mpu6050.c" "kxtj3.c" "buzzer.c" "config.c" "ls2022_esp32.c"
                    INCLUDE_DIRS ".")
